src/app/core/workbox/settings-menu.component.scss
@import "../../../assets/sass/variables";

:host {
    margin-right: 1rem;

    li {
        border-bottom: 1px solid $toolbar-border;
        line-height: $line-height-base;
        padding: .55rem 1rem;
        cursor: pointer;
    }

    .active-icon {
        color: $brand-primary;
    }

    .settings-icon {
        display: inline-block;
        font-size: 1rem;
    }
}

